--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav ml-auto">
-					<a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
 					<a class="nav-link" href="#">Pricing</a>
 					<a class="nav-link" href="#">Features</a>
 					<a class="nav-link" href="#">About</a>
